# Financial-Proposal-ai

./: .gitignore  PROJECT_CONTEXT.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  alembic.ini  pyproject.toml
backend/app/: container.py  main.py
backend/app/api/routers/: curation.py  generate.py  health.py  history.py  ingestion.py  metrics.py  proposals.py  report.py
backend/app/api/schemas/: analytics.py  generation.py
backend/app/core/config/: __init__.py  settings.py
backend/app/core/policies/: __init__.py  classifier.py  quality_gates.py  retrieval.py
backend/app/domain/chunks/: __init__.py  chunk.py  quality.py
backend/app/domain/documents/: __init__.py  acl.py  document.py  enums.py
backend/app/domain/generation/: __init__.py  brief.py  enums.py  generation_event.py
backend/app/domain/ingestion/: __init__.py  anonymization.py  enums.py  extracted.py  lineage.py  redaction.py
backend/app/domain/metrics/: __init__.py  contribution.py
backend/app/domain/ports/: __init__.py  audit_log.py  chunk_catalog.py  document_catalog.py  embedder.py  extractor.py  human_review.py  ingestion_lineage.py  llm_gateway.py  object_store.py  proposal_repository.py  unit_of_work.py  vector_store.py
backend/app/domain/proposals/: __init__.py  enums.py  proposal.py
backend/app/domain/repositories/: __init__.py  repository.py
backend/app/infrastructure/embedding/: __init__.py  (+2 more)
backend/tests/integration/: test_ai_plane_adapters.py  test_analytics_api.py  test_app_health.py  test_chroma_vector_store.py  test_curation_pipeline.py  test_generation_api.py  test_generation_pipeline.py  test_ingestion_pipeline.py  test_persistence_fk_ordering.py  test_persistence_roundtrip.py
(+207 files in other folders)
